<resources>
    <string name="app_name">My First Bank</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="completeName">Nombre Completo</string>
    <string name="exampleCompleteName">ej: Osvaldo Ortega Pérez</string>
    <string name="exampleEmail">Nombre Completo</string>
    <string name="Email">Correo electrónico</string>
    <string name="confirmPassword">Confirmar contraseña</string>

    <string name="usuario">Usuario</string>
    <string name="control_parental">Control Parental</string>
    <string name="ingrese_la_cantidad_maxima_a_retirar">Ingrese la Cantidad maxima a retirar:</string>
    <string name="ingrese_la_cantidad_maxima_a_prestamos">Ingrese la cantidad maxima a prestamos:</string>
    <string name="cambiar_codigo_parental">Cambiar código parental:</string>
    <string name="ej_200">ej: 200$</string>

    <string name="codigo_actual">Código Actual</string>
    <string name="aplicar">Aplicar</string>
    <string name="todo">TODO</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_completo">Nombre Completo:</string>
    <string name="aplicar_cambios">Aplicar Cambios</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ej_osvaldo_ortega">ej: osvaldo.ortega</string>

    <string name="meta">Meta de ahorro:</string>
    <string name="ej_10k">0.00</string>
    <string-array name="tipos_ahorro">
        <item>Diario</item>
        <item>Semanal</item>
        <item>Mensual</item>
    </string-array>
    <string name="ahorrar">Ahorrar</string>
    <string name="ej_cuenta">Cuenta:</string>
    <string name="tipo_hint">Tipo de ahorro</string>
    <string name="duracion">Duración:</string>
    <string name="ahorro_gen">Ahorro Generado:</string>
    <string name="bonus">Interés (7% Anual):</string>
    <string name="movimientos_icono">movimientos_icono</string>
    <string name="movimientos">Movimientos</string>
    <string name="saldo_actual">Tu saldo actual es:</string>
    <string name="mxn">MXN</string>
    <string name="icono_cash">Ícono Cash</string>
    <string name="saldo_pesos">10,500.30</string>
    <string name="volver">volver</string>
    <string name="ingresar_dinero">Ingresar Dinero</string>
    <string name="retirar_dinero">Retirar Dinero</string>
    <string name="pr_stamo">Préstamo</string>
    <string name="pregunta_cantidad_depositar">¿Cuánto dinero vas a depositar?</string>
    <string name="confirmar">Confirmar</string>
    <string name="ingresa_la_cantidad_en_pesos">Ingresa la cantidad en pesos</string>
    <string name="pregunta_retirar_dinero">¿Cuánto dinero vas a retirar?</string>
    <string name="pregunta_prestamo">¿Cuánto dinero vas a solicitar?</string>
    <string name="ahorros">Ahorros</string>

    <string name="_340_50">$340.50</string>

    <string name="mi_primer_banco">Mi Primer Banco</string>
    <string name="su_saldo_actual_es">SU SALDO ACTUAL ES:</string>
    <string name="estado_de_cuenta">Estado de cuenta</string>
    <string name="seleccione_un_mes">Seleccione un mes:</string>
    <string name="ingrese_el_a_o">Ingrese el año:</string>
    <string name="mi_estado_de_cuenta">Estado de Cuenta:</string>
    <string name="ej_2022">ej: 2022</string>
    <string name="aplicar_filtro">Aplicar Filtro</string>
    <string name="icono_conversion_moneda">icono conversion moneda</string>
    <string name="conversion_de_divisas">CONVERSION DE DIVISAS</string>
    <string name="aqui_puedes_comprobar_el_valor_de_tus_ahorros_en_otra_moneda">Aquí puedes comprobar el valor de tus ahorros en otra moneda</string>
    <string name="convertir_a">Convertir a:</string>
    <string name="selecciona_divisa">Selecciona Divisa</string>
    <string name="convertir">CONVERTIR</string>
    <string name="actualmente_1_peso_mxn_equivale_a">Actualmente 1 peso MXN equivale a:</string>
    <string name="ingresar_codigo">Ingresar Codigo</string>
    <string name="ingrese_el_codigo_parental">Ingrese el codigo parental:</string>
    <string name="codigo_parental">Código Parental</string>
    <string name="cambio_de_divisas">Cambio de Divisas</string>
    <string name="ultimos_movimientos">Ultimos Movimientos</string>
    <string name="ingresar_dinero_en_la_cuenta">Ingresar dinero en la cuenta</string>
    <string name="retirar_dinero_de_la_cuenta">Retirar dinero en la cuenta</string>
    <string name="prueba">Prueba</string>
    <string name="regresar">Regresar</string>
    <string name="semanal">Semanal</string>
    <string name="_1">1</string>

    <string-array name="lista_divisas">
        <item>Dólar Americano - USD</item>
        <item>Euro - EUR</item>
        <item>Bitcoin - BTC</item>
        <item>Libra Esterlina - GBP</item>
        <item>Franco Suizo - CHF</item>
        <item>Yen Japonés - JPY</item>
    </string-array>

    <string name="ahorro_titulo">AHORRO</string>
    <string name="crearAhorro_titulo">Creando Nuevo Ahorro</string>
    <string name="dolar_signo">$</string>
    <string name="cantidad_vacia">0.00</string>
    <string name="plan_titulo">Plan:</string>
    <string name="plan_value">Semanal</string>
    <string name="fin_titulo">Fin</string>
    <string name="inicio_titulo">Inicio</string>
    <string name="fecha_vacia">/ /</string>
    <string name="interes_titulo">Interés al finalizar: $</string>
    <string name="descripcion_btnFinalizarAhorro">Clic para finalizar el ahorro (Se perdarán los intereses)</string>
    <string name="finalizar_ahorro">Finalizar Ahorro</string>
    <string name="estado_ahorro">El plan de ahorro está en curso.</string>
</resources>