<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_retirar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c7bf98"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_retirar_dinero"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingresa_la_cantidad_en_pesos"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/volver"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
</LinearLayout>