<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ahorro_Creado">

    <ImageView
        android:id="@+id/iv_CantidadBackground"
        android:layout_width="410dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/blue_color_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:id="@+id/tv_AhorroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/ahorro_titulo"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_CantidadBackground" />

    <TextView
        android:id="@+id/tv_DolarSigno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:text="@string/dolar_signo"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_AhorroCantidad"
        app:layout_constraintTop_toTopOf="@id/tv_AhorroTitulo" />

    <TextView
        android:id="@+id/tv_AhorroCantidad"
        android:text="@string/cantidad_vacia"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_DolarSigno"
        app:layout_constraintTop_toTopOf="@id/tv_AhorroTitulo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/white"
    />
    <TextView
        android:id="@+id/tv_PlanTitulo"
        android:text="@string/plan_titulo"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_DolarSigno"
        app:layout_constraintRight_toLeftOf="@id/tv_AhorroCantidad"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tv_Plan"
        android:text="@string/plan_value"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_DolarSigno"
        app:layout_constraintTop_toBottomOf="@id/tv_AhorroCantidad"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/tv_FinTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/fin_titulo"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/tv_InicioTitulo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_CantidadBackground" />

    <TextView
        android:id="@+id/tv_FinFechaAhorro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fecha_vacia"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/tv_InicioFechaAhorro"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_FinTitulo" />

    <TextView
        android:id="@+id/tv_InicioTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/inicio_titulo"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_FinTitulo"
        app:layout_constraintTop_toBottomOf="@id/iv_CantidadBackground" />

    <TextView
        android:id="@+id/tv_InicioFechaAhorro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fecha_vacia"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_FinFechaAhorro"
        app:layout_constraintTop_toBottomOf="@id/tv_InicioTitulo" />

    <TextView
        android:id="@+id/tv_BonusTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/interes_titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_InicioFechaAhorro" />

    <TextView
        android:id="@+id/tv_BonusAhorro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_vacia"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_BonusTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/tv_BonusTitulo" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_FinalizarAhorro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="112dp"
        android:contentDescription="@string/descripcion_btnFinalizarAhorro"
        android:text="@string/finalizar_ahorro"
        app:icon="@drawable/ic_round_done_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>