<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Parental_Control_Activity">

    <TextView
        android:id="@+id/tv_Cantidad_Maxima_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="1dp"
        android:text="@string/ingrese_la_cantidad_maxima_a_retirar"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_cantidadmaxima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_controlparental" />

    <ImageView
        android:id="@+id/iv_Control_Parental"
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/control_parental" />

    <TextView
        android:id="@+id/tv_controlparental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="487dp"
        android:text="@string/control_parental"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Control_Parental"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_Codigo_Parental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="171dp"
        android:text="@string/cambiar_codigo_parental"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_codigoparental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cantidadmaxima" />

    <Button
        android:id="@+id/btn_Aplicar_Cambios_CP"
        android:layout_width="292dp"
        android:layout_height="68dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:text="@string/aplicar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_codigoparental" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_codigoparental"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="65dp"
        android:hint="@string/codigo_actual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Codigo_Parental" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_cantidadmaxima"
        android:layout_width="286dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="63dp"
        android:hint="@string/ej_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Cantidad_Maxima_r" />

</androidx.constraintlayout.widget.ConstraintLayout>