<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstadoDeCuentaActivity">

    <Spinner
        android:id="@+id/sp_meses"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_AñoDeFiltro"
        app:layout_constraintStart_toEndOf="@+id/tv_SeleccionDeMes"
        app:layout_constraintTop_toBottomOf="@+id/tv_MiEstadoDeCuenta" />

    <TextView
        android:id="@+id/tv_SeleccionDeMes"
        android:layout_width="194dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="26dp"
        android:text="@string/seleccione_un_mes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_IngresoDeAño"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_MiEstadoDeCuenta" />

    <TextView
        android:id="@+id/tv_IngresoDeAño"
        android:layout_width="194dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/ingrese_el_a_o"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_SeleccionDeMes" />

    <TextView
        android:id="@+id/tv_MiEstadoDeCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="75dp"
        android:text="@string/mi_estado_de_cuenta"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_AñoDeFiltro"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginTop="26dp"
        android:text="@string/ej_2022"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_IngresoDeAño"
        app:layout_constraintTop_toBottomOf="@+id/sp_meses" />

    <Button
        android:id="@+id/btn_AplicarFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="128dp"
        android:text="@string/aplicar_filtro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IngresoDeAño" />
</androidx.constraintlayout.widget.ConstraintLayout>