<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">


    <ImageView
        android:id="@+id/iv_Perfil"
        android:layout_width="173dp"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_Perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sharp_account_circle_24"/>

    <TextView
        android:id="@+id/tv_Perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="165dp"
        android:text="@string/perfil"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Perfil"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_CompleteName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/completeName"
        android:layout_marginTop="12sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Perfil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_CompleteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_Username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="12sp"


        app:layout_constraintStart_toStartOf="@+id/ti_CompleteName"
        app:layout_constraintTop_toBottomOf="@+id/ti_CompleteName" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_Password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="12sp"

        app:layout_constraintStart_toStartOf="@+id/ti_Username"
        app:layout_constraintTop_toBottomOf="@+id/ti_Username" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_ConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        app:endIconMode="password_toggle"
        android:layout_marginTop="12sp"

        app:layout_constraintStart_toStartOf="@+id/ti_Password"
        app:layout_constraintTop_toBottomOf="@+id/ti_Password" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_AplicarCambios"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_EstadoDeCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/aplicar_cambios"
        android:text="@string/aplicar_cambios"
        app:icon="@drawable/ic_round_edit_24"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_EstadoDeCuenta"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/estado_de_cuenta"
        android:text="@string/estado_de_cuenta"
        app:icon="@drawable/ic_round_account_balance_24"

        app:layout_constraintBottom_toTopOf="@+id/btn_CerrarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_CerrarSesion"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/cerrar_sesion"
        android:text="@string/cerrar_sesion"
        app:icon="@drawable/round_logout_black_48"/>


</androidx.constraintlayout.widget.ConstraintLayout>