<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PCV_Activity">

    <Button
        android:id="@+id/btn_IngresarCodigo"
        android:layout_width="292dp"
        android:layout_height="68dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="60dp"
        android:text="@string/ingresar_codigo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_pcv" />

    <TextView
        android:id="@+id/tv_IngreseCodigoParental"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:text="@string/ingrese_el_codigo_parental"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tiet_pcv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:maxLength="4"
        android:id="@+id/tiet_pcv"
        android:layout_width="324dp"
        android:layout_height="46dp"
        android:layout_marginStart="43dp"
        android:inputType="number"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="44dp"
        android:hint="@string/codigo_parental"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IngreseCodigoParental" />
</androidx.constraintlayout.widget.ConstraintLayout>